name:                concat-examples
version:             0.1.0.0
cabal-version:       >=1.18
synopsis:            Examples of compiling with categories
description:         Examples of compiling with categories
Category:            categories
license:             BSD3
license-file:        LICENSE
author:              Conal Elliott
maintainer:          conal@conal.net
Copyright:           (c) 2016-2017 by Conal Elliott
build-type:          Simple
extra-source-files:  ChangeLog.md

source-repository head
  type:             git
  location:         git://github.com/conal/concat-examples

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >=4.9 && <4.10
                     , mtl, containers
                     , concat
  exposed-modules:     ConCat.Categories.Gather
                       ConCat.Categories.Poly

-- executable test
--   default-language:    Haskell2010
--   hs-source-dirs:      src
--   include-dirs:        src
--   build-depends:       base >=4.9 && <4.10
--                      , mtl, containers, ghc-prim
--                      , concat
--                      , concat-examples
--   other-modules:     ConCat.Categories.Gather
--   main-is: Main.hs
--   ghc-options:      -O2

test-suite categories-test
  type:             exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base >=4.9 && <4.10
                     , mtl, containers, ghc-prim
                     , concat
                     , concat-examples
--  other-modules:     ConCat.Categories.Gather
  ghc-options:      -O2
